--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
-  <artifactId>mod-patron</artifactId>
+  <artifactId>mod-kb-ebsco-raml-extended</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>Patron Services</name>
   <description>Discovery service initiated patron services for FOLIO</description>
   <inceptionYear>2018</inceptionYear>
-  <url>https://github.com/folio-org/mod-patron</url>
+  <url>https://github.com/folio-org/mod-kb-ebsco-raml-extended</url>
   <organization>
     <name>The Open Library Foundation</name>
     <url>https://dev.folio.org/</url>
   </organization>
   <scm>
-    <url>https://github.com/folio-org/mod-patron.git</url>
-    <connection>scm:git:git://github.com/folio-org/mod-patron.git</connection>
-    <developerConnection>scm:git:git@github.com:folio-org/mod-patron.git</developerConnection>
+    <url>https://github.com/folio-org/mod-kb-ebsco-raml-extended.git</url>
+    <connection>scm:git:git://github.com/folio-org/mod-kb-ebsco-raml-extended.git</connection>
+    <developerConnection>scm:git:git@github.com:folio-org/mod-kb-ebsco-raml-extended.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
   <issueManagement>
@@ -24,12 +24,12 @@
   </issueManagement>
   <ciManagement>
     <system>Jenkins</system>
-    <url>https://jenkins-aws.indexdata.com/job/folio-org/job/mod-patron</url>
+    <url>https://jenkins-aws.indexdata.com/job/folio-org/job/mod-kb-ebsco-raml-extended</url>
   </ciManagement>
 
   <properties>
     <aspectj.version>1.8.9</aspectj.version>
-    <module_name>mod-patron</module_name>
+    <module_name>mod-kb-ebsco-raml-extended</module_name>
     <http.port>8081</http.port>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <ramlfiles_util_path>${ramlfiles_path}/raml-util</ramlfiles_util_path>
@@ -63,13 +63,18 @@
       <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
+  
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.folio</groupId>
+        <artifactId>domain-models-api-interfaces</artifactId>
+        <version>${raml-module-builder.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
-    <dependency>
-      <groupId>org.folio</groupId>
-      <artifactId>domain-models-api-interfaces</artifactId>
-      <version>${raml-module-builder.version}</version>
-    </dependency>
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-runtime</artifactId>
@@ -337,7 +342,7 @@
             <phase>prepare-package</phase>
             <configuration>
               <target>
-                <replace token="baseUri: https://github.com/folio-org/mod-patron" value="baseUri: http://localhost:${http.port}/apis" dir="${basedir}/target/classes/apidocs/raml">
+                <replace token="baseUri: https://github.com/folio-org/mod-kb-ebsco-raml-extended" value="baseUri: http://localhost:${http.port}/apis" dir="${basedir}/target/classes/apidocs/raml">
                   <include name="**/*.raml" />
                 </replace>
                 <replace token="protocols: [ HTTPS ]" value="protocols: [ HTTP ]" dir="${basedir}/target/classes/apidocs/raml">
